# Sila-Prysm-Core

./: .buildkite-bazelrc  .deepsource.toml  .ethspecify.yml  .golangci.yml  .policy.yml  .travis.yml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  INTEROP.md  README.md  SECURITY.md  SILA_PROTO_SHADOW_LAYER.md  TERMS_OF_SERVICE.md  WORKSPACE  deps.bzl  distroless_deps.bzl  go.mod  go.sum  nogo_config.json  prysm.bat  prysm.ps1  prysm.sh  sila-go-ethereum-compatibility-layer.md  sila-kzg-cryptography-compatibility-strategy.md  sila-native-test-vectors-plan.md  sila-p2p-enr-specification.md  sila-protobuf-grpc-identity-plan.md  sila.ps1  sila.sh
api/client/: BUILD.bazel  client_test.go  errors.go  transport_test.go
api/client/beacon/: BUILD.bazel  client.go  client_test.go  doc.go
api/client/builder/: BUILD.bazel  bid.go  client.go  client_test.go  types.go  types_test.go
api/client/event/: BUILD.bazel  event_stream.go  event_stream_test.go  utils_test.go
api/client/validator/: BUILD.bazel  client.go
api/server/: BUILD.bazel  error_test.go
api/server/httprest/: BUILD.bazel  options.go  server.go  server_test.go
api/server/middleware/: BUILD.bazel  middleware.go  middleware_test.go  util_test.go
api/server/structs/: BUILD.bazel  block.go  block_execution.go  conversions.go  conversions_blob.go  conversions_block.go  conversions_block_execution.go  conversions_block_execution_test.go  conversions_block_gloas.go  conversions_block_gloas_test.go  conversions_block_sila.go  conversions_block_sila_test.go  conversions_gloas.go  conversions_lightclient.go  conversions_state.go  conversions_test.go  endpoints_beacon.go  endpoints_blob.go  endpoints_debug.go  endpoints_events.go  endpoints_lightclient.go  endpoints_node.go  endpoints_rewards.go  endpoints_validator.go  other.go  state.go
beacon-chain/core/feed/: BUILD.bazel
beacon-chain/core/gloas/: BUILD.bazel  attestation.go  attestation_test.go  bid.go  bid_test.go  builder_exit.go  deposit_request.go  deposit_request_test.go  parent_payload.go  payload.go  payload_attestation.go  payload_attestation_test.go  payload_test.go  pending_payment.go  pending_payment_test.go  proposer_lookahead.go  proposer_lookahead_test.go  proposer_slashing.go  proposer_slashing_test.go  upgrade.go  upgrade_test.go  withdrawals.go  withdrawals_test.go
beacon-chain/das/: BUILD.bazel  availability_blobs.go  availability_blobs_test.go  availability_columns.go  availability_columns_test.go  bisect.go  blob_cache.go  blob_cache_test.go  data_column_cache.go  data_column_cache_test.go  iface.go  mock.go  needs.go  needs_test.go
beacon-chain/db/filesystem/: BUILD.bazel  blob.go  blob_test.go  cache.go  cache_test.go  data_column.go  data_column_cache.go  data_column_cache_test.go  data_column_test.go  doc.go  iteration.go  iteration_test.go  layout.go  layout_by_epoch.go  layout_flat.go  layout_test.go  migration_test.go  mock.go  pruner.go  pruner_test.go
beacon-chain/db/iface/: BUILD.bazel  interface.go
beacon-chain/forkchoice/types/: BUILD.bazel  types.go
beacon-chain/slasher/types/: BUILD.bazel  types.go
beacon-chain/state/fieldtrie/: BUILD.bazel  doc.md  field_trie.go  field_trie_test.go  helpers.go  helpers_test.go
cache/nonblocking/: BUILD.bazel
cmd/beacon-chain/das/: BUILD.bazel  options.go
cmd/beacon-chain/db/: BUILD.bazel  db.go
cmd/beacon-chain/genesis/: BUILD.bazel  options.go
cmd/beacon-chain/jwt/: BUILD.bazel  jwt.go  jwt_test.go
cmd/beacon-chain/storage/: BUILD.bazel  options.go  options_test.go
cmd/client-stats/flags/: BUILD.bazel
config/proposer/: BUILD.bazel  settings.go  settings_test.go
config/proposer/loader/: BUILD.bazel  loader.go  (+1 more)
consensus-types/: BUILD.bazel  indexed_payload_attestation.go  types.go
consensus-types/blocks/: BUILD.bazel  execution.go  execution_payload_envelope.go  execution_payload_envelope_test.go  execution_test.go  factory.go  factory_test.go  get_payload.go  getters.go  getters_test.go  kzg.go  kzg_test.go  proofs.go  proofs_test.go  proto.go  proto_test.go  roblob.go  roblob_test.go  roblock.go  roblock_test.go  rodatacolumn.go  rodatacolumn_test.go  setters.go  setters_test.go  signed_execution_bid.go  signed_execution_bid_test.go  signed_sila_bid.go  signed_sila_bid_test.go  sila_payload_envelope.go  sila_payload_envelope_test.go  types.go
consensus-types/forkchoice/: BUILD.bazel  types.go
consensus-types/hdiff/: BUILD.bazel  fuzz_test.go  property_test.go  security_test.go  state_diff.go  state_diff.md  state_diff_gloas.go  state_diff_gloas_test.go  state_diff_test.go
consensus-types/helpers/: BUILD.bazel  comparisons.go  comparisons_test.go
consensus-types/interfaces/: BUILD.bazel  beacon_block.go  error.go  error_test.go  execution_payload_envelope.go  light_client.go  signed_execution_payload_bid.go  signed_sila_payload_bid.go  sila_payload_envelope.go  utils.go  utils_test.go
consensus-types/light-client/: BUILD.bazel  bootstrap.go  finality_update.go  header.go  helpers.go  optimistic_update.go  update.go
consensus-types/mock/: BUILD.bazel  block.go
consensus-types/payload-attestation/: BUILD.bazel  readonly_message.go
consensus-types/payload-attribute/: BUILD.bazel  getters.go  getters_test.go  interface.go  types.go
consensus-types/primitives/: BUILD.bazel  builder_index.go  builder_index_test.go  committee_bits_mainnet.go  committee_bits_minimal.go  committee_index.go  domain.go  epoch.go  epoch_test.go  kzg.go  sila_address.go  slot.go  slot_test.go  sszbytes.go  sszbytes_test.go  sszuint64.go  sszuint64_test.go  validator.go  validator_test.go  wei.go  wei_test.go
consensus-types/validator/: BUILD.bazel  custom_types_test.go  types.go
consensus-types/wrapper/: BUILD.bazel  metadata.go
genesis/: BUILD.bazel  embedded.go  embedded_test.go  initialize.go  initialize_test.go  providers.go  storage.go  testing.go
monitoring/backup/: BUILD.bazel
runtime/fdlimits/: BUILD.bazel  fdlimits.go  fdlimits_test.go  log.go
runtime/maxprocs/: BUILD.bazel  log.go  maxprocs.go
testing/require/: BUILD.bazel  requires.go
(+3989 files in other folders)
