load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "indexed_payload_attestation.go",
        "types.go",
    ],
    importpath = "github.com/sila-chain/Sila-Prysm-Core/v7/consensus-types",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
