load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "embedded.go",
        "errors.go",
        "initialize.go",
        "log.go",
        "providers.go",
        "storage.go",
        "testing.go",
    ],
    importpath = "github.com/sila-chain/Sila-Prysm-Core/v7/genesis",
    visibility = ["//visibility:public"],
    deps = [
        "//api/client:go_default_library",
        "//api/client/beacon:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//config/params:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//encoding/ssz/detect:go_default_library",
        "//genesis/internal/embedded:go_default_library",
        "//io/file:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "embedded_test.go",
        "initialize_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/state-native:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//genesis/internal/embedded:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/require:go_default_library",
        "//testing/util:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
    ],
)
