load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["error.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/api/server",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["error_test.go"],
    embed = [":go_default_library"],
    deps = ["//testing/assert:go_default_library"],
)
