load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "list.go",
        "lru.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/cache/nonblocking",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["lru_test.go"],
    embed = [":go_default_library"],
)
