load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["settings.go"],
    importpath = "github.com/sila-chain/Sila-Prysm-Core/v7/config/proposer",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//config/fieldparams:go_default_library",
        "//consensus-types/validator:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/prysm/v1alpha1/validator-client:go_default_library",
        "@com_github_sila_chain_sila//common:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["settings_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/validator:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_sila_chain_sila//common:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
    ],
)
