load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/consensus-types/forkchoice",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
    ],
)
