load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["comparisons.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/consensus-types/helpers",
    visibility = ["//visibility:public"],
    deps = ["//proto/sila/v1alpha1:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["comparisons_test.go"],
    embed = [":go_default_library"],
    deps = ["//proto/sila/v1alpha1:go_default_library"],
)
