load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["readonly_message.go"],
    importpath = "github.com/OffchainLabs/prysm/v7/consensus-types/payload-attestation",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/core/signing:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
