load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["metadata.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/consensus-types/wrapper",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/sila/v1alpha1:go_default_library",
        "//proto/sila/v1alpha1/metadata:go_default_library",
        "//runtime/version:go_default_library",
        "@com_github_sila_go_bitfield//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
