load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fdlimits.go",
        "log.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/runtime/fdlimits",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sila_chain_sila//common/fdlimit:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fdlimits_test.go"],
    deps = [
        ":go_default_library",
        "//testing/assert:go_default_library",
        "@com_github_sila_chain_sila//common/fdlimit:go_default_library",
    ],
)
