load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "maxprocs.go",
    ],
    importpath = "github.com/OffchainLabs/prysm/v7/runtime/maxprocs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_uber_go_automaxprocs//maxprocs:go_default_library",
    ],
)
