load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["event.go"],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/beacon-chain/core/feed",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//testing/slasher/simulator:__subpackages__",
    ],
)
