load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "interface.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/beacon-chain/db/iface",
    # Other packages must use github.com/sila-chain/sila/beacon-chain/db.Database alias.
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/db/filters:go_default_library",
        "//beacon-chain/slasher/types:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//consensus-types/blocks:go_default_library",
        "//consensus-types/interfaces:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//monitoring/backup:go_default_library",
        "//proto/dbval:go_default_library",
        "//proto/sila/v1alpha1:go_default_library",
        "@com_github_sila_chain_sila//common:go_default_library",
    ],
)
