load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "field_trie.go",
        "helpers.go",
        "log.go",
        "metrics.go",
    ],
    importpath = "github.com/sila-chain/Sila-Prysm-Core/v7/beacon-chain/state/fieldtrie",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/state/state-native/custom-types:go_default_library",
        "//beacon-chain/state/state-native/types:go_default_library",
        "//beacon-chain/state/stateutil:go_default_library",
        "//container/multi-value-slice:go_default_library",
        "//container/slice:go_default_library",
        "//container/trie:go_default_library",
        "//crypto/hash:go_default_library",
        "//crypto/hash/htr:go_default_library",
        "//encoding/ssz:go_default_library",
        "//math:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "field_trie_test.go",
        "helpers_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/state/state-native/custom-types:go_default_library",
        "//beacon-chain/state/state-native/types:go_default_library",
        "//beacon-chain/state/stateutil:go_default_library",
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//container/multi-value-slice:go_default_library",
        "//container/trie:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
    ],
)
