load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "log.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/cmd/beacon-chain/db",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/db:go_default_library",
        "//cmd:go_default_library",
        "//runtime/tos:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
