load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "log.go",
        "options.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/cmd/beacon-chain/genesis",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/node:go_default_library",
        "//cmd/beacon-chain/sync/checkpoint:go_default_library",
        "//genesis:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
