load("@sila//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "jwt.go",
        "log.go",
    ],
    importpath = "github.com/sila-chain/Sila-Consensus-Core/v7/cmd/beacon-chain/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//cmd:go_default_library",
        "//io/file:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["jwt_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//cmd:go_default_library",
        "//io/file:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_sila_chain_sila//common/hexutil:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
