load("@sila//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["flags.go"],
    importpath = "github.com/sila-chain/Sila-Prysm-Core/v7/cmd/client-stats/flags",
    visibility = ["//visibility:public"],
    deps = ["@com_github_urfave_cli_v2//:go_default_library"],
)
